# pymodules

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: django_example.py  v2_spec.md
pymodules/: __init__.py  compatibility.py  contracts.py  detector.py  exceptions.py  extensions.py  generator.py  module.py  provider.py  registry.py
pymodules/commands/: __init__.py  cli.py
pymodules/integrations/: __init__.py  django.py  fastapi.py  flask.py
pymodules/management/: _base.py
pymodules/management/commands/: module_delete.py  module_disable.py  module_enable.py  module_list.py  module_make.py  module_make_api_urls.py  module_make_migration.py  module_make_model.py  module_make_model_migration.py  module_make_serializer.py  module_make_viewset.py  module_migrate.py  module_publish.py  module_show.py
tests/: test_detector.py  test_pymodules.py
